Fix z-index of layers. Settings on top.

--- a/src/ui-style/ui.css
+++ b/src/ui-style/ui.css
@@ -303,7 +303,7 @@ cst-select:active {
 #toggle-settings-overlay[is-active="true"],
 #toggle-remote-debug-overlay[is-active="true"] {
     position: relative;
-    z-index: 4;
+    z-index: 301;
     box-shadow: inset 0 1px 3px rgba(0, 0, 0, .5);
     border-color: #444;
 }
@@ -1391,7 +1391,7 @@ overlay {
     bottom: 0;
     right: 0;
     left: 0;
-    z-index: 3;
+    z-index: 300; /* Need to clean this up, there is no reason for z-index to ever be this high. */
     padding: 0 30px;
 }
 
